# voice-recognition-error

./: create_data.py  eval_model.py  noise.py  preprocess.py  pyproject.toml  sentence_bert.py  train.py
data/: test.tsv  train.tsv  valid.tsv
test_data/: test.tsv  train.tsv  valid.tsv
utils/: setence_bert_classifier.py
