[tool.poetry]
name = "pkutech"
version = "0.1.0"
description = ""
authors = ["Jinyamyzk <63580543+Jinyamyzk@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.4.1"
sklearn = "^0.0"
torch = "^1.9.0"
torchtext = "^0.10.1"
pandas = "^1.5.0"
pykakasi = "^2.2.1"
transformers = "^4.22.2"
ginza = "^5.1.2"
ja-ginza = "^5.1.2"
openpyxl = "^3.0.10"
fugashi = "^1.2.0"
ipadic = "^1.0.0"
matplotlib = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
